# octa

./: .caiignore  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .mega-linter.yml  .trivyignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  THIRD_PARTY_LICENSES.md  cai_config.yml  get-octa.sh  install.ps1  install.sh  mkdocs.yml  release_notes.md
.cargo/: config.toml
.github/aur/: .SRCINFO  PKGBUILD
.github/aur-bin/: .SRCINFO  PKGBUILD
.github/workflows/: aur-release.yml  ci.yml  docs.yml  release.yml
.linters/: .hadolint.yaml  .ls-lint.yml  .markdownlint.json  lychee.toml  trivy.yml
.linters/mega-linter-plugin-branchname/: branchname.megalinter-descriptor.yml
assets/: Dockerfile.sublime-syntax  TOML.sublime-syntax
docs/: index.md  privacy.md  troubleshooting.md
docs/assets/screenshots/: INDEX.md
docs/assets/store/: INDEX.md
docs/cli/: anonymize.md  dedupe.md  diff.md  docker.md  impute.md  index.md  join.md  man-page.md  octa.1.adoc  outliers.md  partition.md  pii.md  sample.md  tail.md  union.md
docs/getting-started/: first-steps.md  installation.md  supported-formats.md
docs/mcp/: examples.md  index.md  limits-and-truncation.md  setup.md  troubleshooting.md
docs/mcp/tools/: anonymize.md  correlation.md  detect_outliers.md  detect_pii.md  diff_tables.md  drop_duplicates.md  edit_table.md  index.md  (+12 more)
docs/reference/: diagnostics.md  languages.md  settings.md  shortcuts.md
docs/tips/: workflows.md
docs/usage/: anonymize-columns.md  auto-save.md  bookmarks.md  chart.md  chatbot.md  clean-headers.md  cloud-inventory.md  cloud-storage.md  conditional-formatting.md  correlation.md  data-quality-report.md  data-validation.md  database-connections.md  date-time-calculation.md  detect-outliers.md  detect-pii.md  drop-duplicate-rows.md  editing.md  fill-missing-values.md  filter-to-marked.md  find-near-duplicates.md  formulas.md  join-tables.md  partition-by-column.md  pivot.md  rename-columns.md  schema-export.md  search-and-filter.md  sql.md  summary.md  table-tools.md  table-view.md  tabs-and-sidebar.md  transform-column.md  union-tables.md  value-frequency.md
examples/: malformed.csv
locales/: bg.toml  cs.toml  da.toml  de.toml  el.toml  en.toml  es.toml  et.toml  fi.toml  fr.toml  hr.toml  hu.toml  id.toml  it.toml  ja.toml  ko.toml  lt.toml  lv.toml  nl.toml  no.toml  pl.toml  pt.toml  ro.toml  ru.toml  sk.toml  sl.toml  sr.toml  sv.toml  tr.toml  uk.toml  vi.toml  zh.toml
pkg/: README-linux.md  README-windows.md  build-local.sh
scripts/: gen_screenshot_index.py
src/: git.rs  i18n.rs  i18n_tests.rs  lib.rs  main.rs  platform.rs
src/app/: auto_save.rs  central_panel.rs  chat_panel.rs  chat_prompts.rs  clipboard.rs  cloud_browser.rs  cloud_tree.rs  db_browser.rs  db_conn_cache.rs  db_tree.rs  easter_eggs.rs  edit_ops.rs  file_io.rs  find_replace.rs  init.rs  mark_bookmark.rs  mod.rs  multi_search.rs  search_history.rs  shortcuts_dispatch.rs  sidebar.rs  sql_panel.rs  sql_snippets.rs  state.rs  status_bar.rs  tabs.rs  toolbar_handler.rs  update_loop.rs
src/auth/: mod.rs  oauth_browser.rs
src/cli/: anonymize.rs  compare_schemas.rs  db.rs  dedupe.rs  diff.rs  impute.rs  join.rs  mod.rs  outliers.rs  partition.rs  pii.rs  sample.rs  tail.rs  union.rs  unique_columns.rs  validate_schema.rs
src/cloud/: azure.rs  buckets.rs  connection.rs  credentials.rs  factory.rs  gcs.rs  login.rs  mod.rs  provider.rs  s3.rs  secret.rs  url.rs
src/data/: cell_value.rs  chart.rs  chart_export.rs  chart_export_tests.rs  chart_tests.rs  compare.rs  compare_tests.rs  conditional_format.rs  conditional_format_tests.rs  correlation.rs  date_infer.rs  date_infer_tests.rs  dedupe.rs  diff.rs  diff_tests.rs  encoding.rs  encoding_tests.rs  fuzzy_duplicates.rs  geo_detect.rs  impute.rs  inventory.rs  join.rs  json_util.rs  json_util_tests.rs  links.rs  mark_filter.rs  marks.rs  mod.rs  multi_search.rs  multi_search_tests.rs  num_format.rs  num_format_tests.rs  outliers.rs  partition.rs  pii.rs  pii_tests.rs  pivot.rs  quality.rs  quality_tests.rs  rename_map.rs  (+18 more)
src/db/: auth.rs  bigquery.rs  clickhouse.rs  copy.rs  databricks.rs  exasol.rs  mod.rs  mssql.rs  mysql.rs  postgres.rs  rest.rs  snowflake.rs  write_back.rs
src/diagnostics/: crash.rs  mod.rs  report.rs  rotating_writer.rs
src/formats/: archive_reader.rs  archive_reader_tests.rs  bson_reader.rs  compression.rs  csv_reader.rs  dbf_reader.rs  duckdb_reader.rs  excel_reader.rs  fwf_reader.rs  fwf_reader_tests.rs  geojson_reader.rs  gpkg_reader.rs  hdf5_reader.rs  json_reader.rs  jupyter_reader.rs  jupyter_reader_tests.rs  lakehouse_reader.rs  markdown_reader.rs  mod.rs  msgpack_reader.rs  numpy_reader.rs  ods_reader.rs  ods_reader_tests.rs  orc_reader.rs  parquet_reader.rs  pdf_reader.rs  rds_reader.rs  shapefile_reader.rs  sniff.rs  sniff_tests.rs  sqlite_reader.rs  text_reader.rs  toml_reader.rs  xml_reader.rs
src/mcp/: mod.rs  mod_tests.rs
src/sql/: engine.rs  mod.rs  mod_tests.rs  workspace.rs  workspace_tests.rs
src/ui/: directory_tree.rs  directory_tree_tests.rs  mod.rs  search_highlight.rs  search_highlight_tests.rs  settings.rs  shortcuts.rs  status_bar.rs  syntax.rs  syntax_tests.rs  table_picker.rs  table_view.rs  theme.rs  toolbar.rs
src/view_modes/: chart.rs  epub_reader.rs  json_tree.rs  map.rs  markdown.rs  notebook.rs  pdf.rs  raw_text.rs  raw_text_tests.rs  sql.rs  sql_tests.rs  text_ops.rs  text_ops_tests.rs
tests/: anonymize_cli_tests.rs  archive_reader_tests.rs  compression_read_tests.rs  csv_tests.rs  data_model_tests.rs  db_live_tests.rs  db_schema_change_tests.rs  dedupe_cli_tests.rs  duckdb_tests.rs  edit_table_add_column_tests.rs  format_open_tests.rs  gpkg_tests.rs  json_tests.rs  open_as_tests.rs  parquet_tests.rs  pdf_tests.rs  schema_export_tests.rs  search_tests.rs  sniff_tests.rs  sql_result_cap_tests.rs  sql_tests.rs  sql_workspace_tests.rs  status_bar_tests.rs  time_calc_tests.rs  union_files_tests.rs
tests/common/: mod.rs
tests/fixtures/: nested.json  sample.npz
tools/: translate_features.py
windows/: AppxManifest.xml  STORE_SETUP.md
(+183 files in other folders)
